--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.5.2",
+    "styled-components": "^6.1.19",
     "tinykeys": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "22.17.2",
     "@types/react": "18.3.23",
     "@types/react-dom": "18.3.7",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "9.33.0",
     "eslint-config-next": "15.4.6",
     "prettier": "3.6.2",
